kubernetes/datasource/templates/datasource-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: datasource
  namespace: datasource
