kubernetes/datasource/templates/idp-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: idp
  name: idp
  namespace: datasource
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: idp
  template:
    metadata:
      labels:
        io.kompose.service: idp
    spec:
      containers:
        - env:
            - name: JWT_SECRET
              value: n3XD9PrH6E6zPGZ2A9PuZ1W7scAL6H3x
            - name: PORT
              value: "3000"
          image: doughjoe77/datasource-idp:latest
          name: idp
          ports:
            - containerPort: 3000
              protocol: TCP
      restartPolicy: Always
