kubernetes/datasource/templates/pgadmin-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: pgadmin
  name: pgadmin
  namespace: datasource
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: pgadmin
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        io.kompose.service: pgadmin
    spec:
      containers:
        - env:
            - name: PGADMIN_DEFAULT_EMAIL
              value: user@user.com
            - name: PGADMIN_DEFAULT_PASSWORD
              value: test123
            - name: POSTGRES_DB
              value: postgres
            - name: POSTGRES_HOST
              value: postgres
            - name: POSTGRES_PASSWORD
              value: test123
            - name: POSTGRES_USER
              value: postgres
          image: dpage/pgadmin4:latest
          name: pgadmin
          ports:
            - containerPort: 80
              protocol: TCP
          volumeMounts:
            - mountPath: /pgadmin4/servers.json
              name: pgadmin-cm0
              subPath: servers.json
      restartPolicy: Always
      volumes:
        - configMap:
            items:
              - key: servers.json
                path: servers.json
            name: pgadmin-cm0
          name: pgadmin-cm0
