kubernetes/datasource/templates/graphql-engine-editor-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: graphql-engine-editor
  name: graphql-engine-editor
  namespace: datasource
spec:
  ports:
    - name: "8080"
      port: 8080
      targetPort: 8080
  selector:
    io.kompose.service: graphql-engine-editor
