kubernetes/datasource/templates/idp-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: idp
  name: idp
  namespace: datasource
spec:
  ports:
    - name: "3000"
      port: 3000
      targetPort: 3000
  selector:
    io.kompose.service: idp
