kubernetes/datasource/templates/pgadmin-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: pgadmin
  name: pgadmin
  namespace: datasource
spec:
  ports:
    - name: "8889"
      port: 8889
      targetPort: 80
  selector:
    io.kompose.service: pgadmin
