kubernetes/datasource/templates/sample-gql-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: sample-gql
  name: sample-gql
  namespace: datasource
spec:
  ports:
    - name: "4000"
      port: 4000
      targetPort: 4000
  selector:
    io.kompose.service: sample-gql
